Create settings panel
html
* settings structure

css
* style for settings
* replace styles

js
* open and close functions

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </svg>
             </div>
             <div class="sity">Петропавловск-Камчатский</div>
-            <div class="options">
+            <div class="options" onclick="openSettings()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-gear"
                     viewBox="0 0 16 16">
                     <path
@@ -151,9 +151,27 @@
                 </div>
             </section>
         </main>
-        <section class="settings">
-            
-        </section>
+    </main>
+    <section class="settings ps-3 pe-3">
+        <header class="ps-3 pe-3 d-flex justify-content-between align-items-center border-bottom border-dark">
+            <div class="return-to-main" onclick="closeSettings()">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-arrow-return-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z" />
+                </svg>
+            </div>
+            <div class="sity">Настройки</div>
+            <div></div>
+        </header>
+        <div class="measure d-flex justify-content-between pt-3">
+            <span>Единицы измерения</span>
+            <select name="measure" id="">
+                <option value="celsius">C&deg;</option>
+                <option value="fahrenheit">F&deg;</option>
+            </select>
+        </div>
+    </section>
 </body>
 <script src="bootstrap/js/bootstrap.js"></script>
 <script src="main.js"></script>
